[package]
name = "lavendeux-parser"
description = "Extensible parsing engine for expression evaluation"
license = "MIT OR Apache-2.0"
keywords = ["parser", "text", "math"]
categories = ["parser-implementations", "development-tools", "command-line-utilities", "encoding"]
homepage = "https://rscarson.github.io/Lavendeux/"
repository = "https://github.com/rscarson/lavendeux-parser"
readme = "readme.md"
version = "0.9.0"
edition = "2021"

[features]
default = ["extensions", "crypto-functions", "encoding-functions"]
extensions = ["rustyscript"]
crypto-functions = ["md-5", "sha2"]
encoding-functions = ["base64", "urlencoding"]

[dependencies]
once_cell = "1.18.0"
thiserror = "1.0.40"
regex = "1.10.2"
pest = "2.5.6"
pest_derive = "2.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.20", features = ["blocking"] }
chrono = "0.4.23"
rand = "0.8.5"

# Feature deps
rustyscript = { version = "0.1.3", optional = true }
md-5 = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.6", optional = true }
base64 = { version = "0.21.0", optional = true }
urlencoding = { version = "2.1.2", optional = true }

[dev-dependencies]
version-sync = "0.9.4"
cargo-readme = "3.2.0"
